# boom_backend

./: pyproject.toml  run_server.sh
boom_frontend/: index.html  package-lock.json  package.json
boom_frontend/src/: App.tsx
src/: main.py
static/: index.html
