[tool.poetry]
name = "boom_backend"
version = "0.1.0"
description = ""
authors = ["Omry Zuta <omry.zuta@gmail.com>"]
readme = "README.md"
packages = [{include = "boom_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
start = "boom_backend.run_server.sh"
hello = "boom_backend.hello:say_hello"