[tool.poetry]
name = "boom_backend"
version = "0.1.0"
description = ""
authors = ["Omry Zuta <omry.zuta@gmail.com>"]
readme = "README.md"
packages = [{include = "boom_backend"}]

[tool.poetry.dependencies]
python = "3.9.10"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
