[tool.poetry]
name = "boom_backend"
version = "0.1.0"
description = ""
authors = ["Omry Zuta <omry.zuta@gmail.com>"]
readme = "README.md"
packages = [{include = "boom_backend"}]

[tool.poetry.dependencies]
python = "^3.9.10"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
python-dotenv = "^1.0.0"
ics = "^0.7.2"
gspread = "^5.11.1"
google-auth = "^2.22.0"
google-auth-oauthlib = "^1.0.0"
openai = "^0.28.0"
tiktoken = "^0.4.0"
aiofiles = "^23.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
